modif imdbpro en imdb pour spider et item

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django
 
+scrapper/affiche_film
 ### Django ###
 *.log
 *.pot
