--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 ENV PYTHONUNBUFFERED 1
 
-COPY requirements_api.txt /app/
+COPY requirements.txt /app/
 
 RUN python3 -m pip install --upgrade pip \
 pip install -r requirements.txt
